--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18",
+    "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
